# sonaric-desktop

./: .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  test-build.yml  upload.yml
src/: App.vue  auto-imports.d.ts  components.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/res/: install-linux.sh  install-mac.sh  install-win.bat  start-win.bat  stop-linux.sh  stop-mac.sh  stop-win.bat  uninstall-linux.sh  uninstall-mac.sh  uninstall-win.bat
src-tauri/src/: error.rs  helper.rs  main.rs  version.rs
src/assets/: main.css
src/components/: ReportBug.vue
src/components/layouts/: Default.vue
src/components/ui/: Button.vue  Input.vue  Nav.vue  Spinner.vue  Toggle.vue
src/composables/: useBugReport.ts  useTauri.ts
src/views/: HomeView.vue
