[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "tauri-app"

[[bin]]
name = "ci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["updater", "window-set-size", "window-maximize", "shell-execute", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1.0.82"
duct = "0.13.7"
reqwest = "0.12.4"
semver = "1.0.22"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
sentry = { version = "0.32.3", features = ["tracing", "anyhow"] }
tracing = "0.1.40"
sentry-tracing = "0.32.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
env_logger = "0.11.3"
tracing-appender = "0.2.3"
sentry-anyhow = "0.32.3"
regex = "1.10.4"
rev_buf_reader = "0.3.0"
uuid = { version = "1.8.0", features = ["v4"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
